<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_detail_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/warehouse_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mmtitle_bg_alpha" >

        <Button
            android:id="@+id/warehouse_button_back"
            android:layout_width="67.0dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/title_back_btn"
            android:text="@string/back"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/warehouse_textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/warehouse"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/warehouse_button_new"
            android:layout_width="67.0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/title_btn_right"
            android:src="@drawable/mm_title_btn_album"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/warehouse_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/warehouse_footbar_layout"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:background="#44000000"
        android:gravity="center_vertical"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/warehouse_footbar_newbill"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/color_item_button_selector"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10.0dip"
            android:scaleType="fitCenter"
            android:text="@string/warehouse_footbar_newbill" />
    </LinearLayout>
    
    <RelativeLayout
	    android:id="@+id/warehouse_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warehouse_title_layout"
        android:layout_above="@id/warehouse_footbar_layout"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/warehouse_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:cacheColorHint="#00000000"
            android:divider="#D4D4D4"
            android:dividerHeight="0.5dip" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>